tests/control_flow/valid/conditionals/nested_if.src
fn main() -> int {
    int x = 10;
    int y = 5;
    if (x > 0) {
        if (y > 0) {
            return 1;
        }
    }
    return 0;
}