tests/control_flow/invalid/type_errors/while_float_condition.src
fn main() -> int {
    float x = 1.5;
    while (x) {
        return 1;
    }
    return 0;
}